--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="rtl" lang="fa">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="هایپر پروتئین پرولند"
     />
     <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/fa/css/all.css" />
@@ -29,7 +29,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="text-align: right;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
